--- a/Regular/300 L/Group 4/group_list.html
+++ b/Regular/300 L/Group 4/group_list.html
@@ -13,10 +13,10 @@
                 <th colspan="4">Group List</th>
             </tr>
             <tr>
-                <th>Index Number</th>
-                <td>Full Name</td>
-                <td>Email</td>
-                <td>Telephone</td>
+                <th>5201041133</th>
+                <td>Asiamah Ernest </td>
+                <td>aprudent95@gmail.com</td>
+                <td>0542627233</td>
             </tr>
         </thead>
         <tbody>
